Various contrast fixes
Most importantly, make the close button white instead of black so it can be seen.
Also:
- Tweak link color to make it less desaturated and improve contrast
- Fix contrast of navigation tab labels

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -4,6 +4,7 @@
   $body-bg: #1a1a1a,
   $modal-content-color: #f0f0f0,
   $modal-content-bg: #1a1a1a,
+  $nav-tabs-link-active-color: var(--bs-gray-400),
 );
 
 @use "includes/components/table";
@@ -36,7 +37,7 @@ h2 {
 }
 
 a {
-  color: #337ab7;
+  color: #3787cc;
   text-decoration: none !important;
 }
 
